Update:ESLint settings

--- a/packages/training-web-1/.eslintrc.json
+++ b/packages/training-web-1/.eslintrc.json
@@ -4,10 +4,7 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "unused-imports"
-  ],
+  "plugins": ["@typescript-eslint", "unused-imports"],
   "extends": [
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
@@ -39,12 +36,7 @@
             "position": "before"
           }
         ],
-        "pathGroupsExcludedImportTypes": [
-          "builtin"
-        ],
-        "alphabetize": {
-          "order": "asc"
-        },
+        "pathGroupsExcludedImportTypes": ["builtin"],
         "newlines-between": "never"
       }
     ],
